# Revolut-DAO-Suite

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-install.sh
Backend/Database/: __init__.py  blockchain.py
Backend/Features/: __init__.py  dao_creation.py  dao_management.py  proposal_voting.py  proposals.py  smart_contracts.py  transactions.py
Frontend/: Excel Revolut DAO Suite App.xlsm  excel_functions.py
Frontend/Input/: excel_creation.py  excel_macros.py  excel_proposals.py  excel_smart_contracts.py  excel_transactions.py
Tests/: test_blockchain.py  test_dao_creation.py  test_excel_creation.py  test_excel_proposals.py  test_excel_transactions.py  test_proposals.py  test_smart_contracts.py  test_transactions.py
